@startuml DM-ENROLMENT
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Enrolment" {
  entity Enrolment

  class State
}


entity Enrolment <<entity>> <<root>> {
  - createdAt
  - updatedAt
}

package "<<aggregate>> Student" {
  entity Student
}


entity Student <<entity>> <<root>> {
}

package "<<aggregate>> Course" {
  entity Course
}


entity Course <<entity>> <<root>> {
}

class State <<(V,#FF8B40) value object>> {}
note left of State
  PENDING
  ACCEPTED
  REJECTED
end note

Enrolment --> "1" State : has

Enrolment --> "1" Student : has
Enrolment -> "1" Course : is for

@enduml
